--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,8 @@ a.nostyle:visited {
 }
 
 .wrapper {
-    width: 960px;
+    max-width: 960px;
+    width: 100%;
     height: 76px;
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
@@ -57,7 +58,6 @@ a.nostyle:visited {
      color: #4aaaa5;
      font-weight: bold;
      font-size: 30px;
-     width: 608px;
      border-bottom: 4px solid #cccccc;
      padding-bottom: 20px;
  }
@@ -112,7 +112,8 @@ ul {
 }
 
 .container {
-    width: 960px;
+    max-width: 960px;
+    width:100%;
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto 0 auto;
@@ -120,12 +121,13 @@ ul {
 }
 
 .main {
-    width: 650px;
+    max-width: 650px;
+    width: 66%;
     background-color: #ffffff;
     float: left;
     border: 1px solid #dddddd;
     padding: 20px;
-    margin: 40px 0px 40px 0px;
+    margin: 40px 0px;
 }
 
 .img-text {
@@ -134,7 +136,8 @@ ul {
 }
 
 .sidebar {
-    width: 270px;
+    max-width: 270px;
+    width: 30%;
     background-color: #ffffff;
     border: 1px solid #dddddd;
     float: right;
@@ -168,7 +171,7 @@ ul {
 }
 
 #name-box {
-    width: 608px;
+    width: 100%;
     color: #777777;
     padding: 10px 20px;
     margin: 8px 0px;
@@ -176,7 +179,7 @@ ul {
 }
 
 #email-box {
-    width: 608px;
+    width: 100%;
     color: #777777;
     padding: 10px 20px;
     margin: 8px 0px;
@@ -184,7 +187,7 @@ ul {
 }
 
 #message-box {
-    width: 608px;
+    width: 100%;
     height: 250px;
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
@@ -207,88 +210,30 @@ ul {
 .port-img {
     height: 200px;
     width: 275px;
-    margin-top: 50px;
-}
-
-#port-image-1 {
-    float: left;
-}
-
-#port-image-2 {
-    float: right;
-}
-
-#port-image-3 {
-    float: left;
-}
-
-#port-image-4 {
-    float: right;
-}
-
-#port-image-5 {
-    float: left;
 }
 
 .box-label {
     height: 50px;
-    width: 275px;
+    max-width: 275px;
+    width: 100%;
     background-color: #4aaaa5;
     color: #ffffff;
     font-size: 20px;
     text-align: center;
     line-height: 50px;
+    position: absolute;
+    bottom: 15px
 }
 
-#port-div-1 {
+.port-div {
     float: left;
     position: relative;
+    margin-top: 20px;
 }
 
-#port-div-2 {
-    float: right;
-    position: relative;
-}
-
-#port-div-3 {
-    float: left;
-    position: relative;
-}
-
-#port-div-4 {
-    float: right;
-    position: relative;
-}
-
-#port-div-5 {
-    float: left;
-    position: relative;
-}
-
-#port-image-1-label {
-    position: absolute;
-    bottom: 15px;
-}
-
-#port-image-2-label {
-    position: absolute;
-    bottom: 15px;
-}
-
-#port-image-3-label {
-    position: absolute;
-    bottom: 15px;
-}
-
-#port-image-4-label {
-    position: absolute;
-    bottom: 15px;
-}
-
-#port-image-5-label {
-    position: absolute;
-    bottom:15px;
-}
+.port-div:nth-child(even) {
+    margin-left: 40px;
+  }
 
 @media screen and (max-width: 640px) {
     .name {
@@ -320,7 +265,31 @@ ul {
     }
 
     .main {
-        margin-top: 60px;
+        margin: 60px 0px 40px 0px;
+        max-width: 620px;
+        width: 100%;
+    }
+
+    .wrapper {
+        /*width: 620px;*/
+        max-width: 620px;
+    }
+
+    .container {
+        /*width: 620px;*/
+        max-width: 620px;
+    }
+    
+    .sidebar {
+        /*width: 620px;*/
+        max-width: 620px;
+        width: 100%;
+    }
+
+    #profile-image {
+        float: none;
+        height: auto;
+        width: 100%;
     }
 
 }
@@ -328,15 +297,20 @@ ul {
 @media screen and (max-width: 768px) {
 
     .wrapper {
-        width: 650px;
+        max-width: 650px;
     }
 
     .container {
-        width: 650px;
+        max-width: 650px;
+    }
+
+    .main {
+        width: 100%;
     }
     
     .sidebar {
-        width: 650px;
+        max-width: 650px;
+        width: 100%;
         float: left;
         margin-top: 0px;
         margin-bottom: 40px;
@@ -353,5 +327,5 @@ ul {
 }
 
 @media screen and (max-width: 980px) {
-    
+
 }
